# gstmorsesrc

./: .gitignore  LICENSE  Makefile  README.md  meson.build
src/: gstmorsesrc.c
